compiler/tools/fpp-check/test/port_numbering/duplicate_connection.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/duplicate_connection.fpp: 29.5
    c1.pOut -> c2.pIn
    ^
error: duplicate connection
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/duplicate_connection.fpp: 28.5
    c1.pOut -> c2.pIn
    ^
port matching is specified here:
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/duplicate_connection.fpp: 8.3
  match pIn with pOut
  ^
